--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@ h1 {
 
 .tagline {
   margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.tagline span {
+  font-size: 0.7rem;
 }
 
 .headline__img {
@@ -51,7 +56,7 @@ h1 {
 
 li {
   display: inline-block;
-  font-size: 1.5em;
+  font-size: 0.7em;
   list-style-type: none;
   padding: 1em;
   text-transform: uppercase;
@@ -59,7 +64,7 @@ li {
 
 li span {
   display: block;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 .emoji {
@@ -74,15 +79,16 @@ li span {
 
 @media all and (max-width: 768px) {
   h1 {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
   }
   
   li {
-    font-size: 1.125rem;
+    font-size: 0.7rem;
     padding: .75rem;
   }
   
   li span {
-    font-size: 3.375rem;
+    margin-top: 20px;
+    font-size: 1.375rem;
   }
 }
